# find_candidate

./: README.md  job_description.txt  pyproject.toml
db/: chroma.sqlite3
src/find_candidate/: crew.py  main.py
src/find_candidate/config/: agents.yaml  tasks.yaml
